--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -622,4 +622,26 @@
             display: block;
         }
 
+        aside{
+            display: none;
+        }
+
+    }
+
+    .ad{
+        text-decoration: none;
+        max-width: 600px;
+        display: block;
+    }
+
+    .ad h3{
+        margin-bottom: 0;
+    }
+
+    .ad img{
+        margin: 30px 0 10px;
+    }
+
+    .ad p{
+        color: #0f1894;
     }
