--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -641,7 +641,7 @@
         margin-top: 40px;
     }
 
-    .ad h3{
+    .ad h3, .ads h3{
         margin-bottom: 0;
         margin-top: 20px;
     }
